@@ -1,6 +1,8 @@
 0.1.1:
 
-
+* remove tabdelim prereq
+* add unit test
+* release under Apache License v2
 
 0.1.0:
 
